# segway-connect-system-source-mimecast

./: .gitignore  Dockerfile  README copy.md  README.md  demo4.py  plugin.conf  pyproject.toml
.github/workflows/: ci-main.yml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  secret.yaml  statefulset.yaml
segateway_source_mimecast/: ConfGenSource.py  LogSource.py  LogSourcePlugin.py
segateway_source_mimecast/conf/: source.conf
